--- a/apps/chives-and-dill/src/styles.scss
+++ b/apps/chives-and-dill/src/styles.scss
@@ -8,6 +8,11 @@ body {
   -moz-user-select: none; 
   -ms-user-select: none;
   user-select: none;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  
   #root { 
     height: 100vh;
     display: flex;
